user feature done

--- a/poc-grpc-server-core/pom.xml
+++ b/poc-grpc-server-core/pom.xml
@@ -11,4 +11,10 @@
 
     <artifactId>poc-grpc-server-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+    </dependencies>
 </project>
